prometheus/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus
  namespace: igloo
  labels:
    app: prometheus
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
        - name: prometheus
          image: evns/rpi-prometheus:v2.1.0
          imagePullPolicy: IfNotPresent
          command: ["/bin/prometheus",
                    "--config.file", "/prometheus/prometheus.yml",
                    "--web.external-url", "https://prometheus.igloo.odicro.com",
                    "--storage.tsdb.path", "/data"]
          volumeMounts:
          - mountPath: "/prometheus"
            name: "config"
          - mountPath: "/data"
            name: data
      volumes:
        - name: config
          configMap:
            name: prometheus-conf
        - name: data
          hostPath:
            type: DirectoryOrCreate
            path: /igloo/prometheus/data
