prometheus/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: igloo
  labels:
    app: prometheus
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 9090
      protocol: TCP
      name: prometheus
  selector:
    app: prometheus
