prometheus/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: igloo
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: "basic"
    ingress.kubernetes.io/auth-secret: "prometheus-auth"
spec:
  rules:
  - host: prometheus.home.odicro.com
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 80
